--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root" data-centre="SFC1NR1CEF1JI08B"></div>
+    <div id="root" data-centre="SFC1NSR1T3GSAM62"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
